--- a/index.html
+++ b/index.html
@@ -15,147 +15,129 @@
           <li><a href="#">Гостиницы</a></li>
         </ul>
       </header>
-      <section class="head">                                              <!--Надпись на картинке SEDONA etc. она часть изображения или фоном лежит?-->
-          <img src="http://placehold.it/150x100" width="100%" alt="sedona"> <!--Валидатор ругается на width="100%", хочет в пикселях, не пойму почему-->
-          <div class="head-caption">
-            <p><strong>
-              Седона - небольшой городок в аризоне, <br>
-              заслуживающий большего! <br>
-            </strong>
-              Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!
-            </p>
-          </div>
+      <section class="head-pic">
+          <img src="http://placehold.it/150x100" width="666" height="200" alt="sedona">
       </section>
-      <section class="box-features">
-        <article class="box box-blue">
-          <div class="box-content">
-            <strong class="box-name">Настоящий городок</strong> <br>
-            <span>-№1-</span>
+      <section class="head-caption">
+        <h2>
+          Седона - небольшой городок в аризоне, <br>
+          заслуживающий большего! <br>
+        </h2>
+        <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
+      </section>
+      <section class="real-town">
+        <div class="box box-blue">
+            <h2>Настоящий городок</h2>
+            <span>&ndash;№1&ndash;</span> <br>
             <p>
               Седона - не аттракцион для туристов, <br>
               там течет своя жизнь
             </p>
-          </div>
-        </article>
-        <article class="box box-wide">
+        </div>
+        <div class="box box-wide">
           <img src="http://placehold.it/150x100" width="360" height="120" alt="pic">
-        </article>
-        <article class="box box-white">
-          <div class="box-content">
+        </div>
+      </section>
+      <section class="tips">
+        <div class="box box-white">
             <img src="http://placehold.it/150x100" width="120" height="80" alt="pic">
-            <strong class="box-name">Жилье</strong>
+            <h2>Жилье</h2>
             <p>
               Рекомендуем пожить в настоящем <br>
               мотеле, все как в кино!
             </p>
-          </div>
-        </article>
-        <article class="box box-white">
-          <div class="box-content">
+        </div>
+        <div class="box box-white">
             <img src="http://placehold.it/150x100" width="120" height="80" alt="pic">
-            <strong class="box-name">Еда</strong>
+            <h2>Еда</h2>
             <p>
               Всегда заказывайте фирменный бургер, <br>
               вы не разочаруетесь!
             </p>
-          </div>
-        </article>
-        <article class="box box-white">
-          <div class="box-content">
+        </div>
+        <div class="box box-white">
             <img src="http://placehold.it/150x100" width="120" height="80" alt="pic">
-            <strong class="box-name">Сувениры</strong>
+            <h2>Сувениры</h2>
             <p>
               Не только китайского, <br>
               но и местного производства!
             </p>
-          </div>
-        </article>
-        <article class="box box-wide">
+        </div>
+      </section>
+      <section class="devil-bridge">
+        <div class="box box-wide">
           <img src="http://placehold.it/150x100" width="360" height="120" alt="pic">
-        </article>
-        <article class="box box-blue">
-          <div class="box-content">
-            <strong class="box-name">
-              Там есть <br>
-              мост дьявола</strong> <br>
-            <span>-№2-</span>
+        </div>
+        <div class="box box-blue">
+            <h2>Там есть <br>мост дьявола</h2>
+            <span>&ndash;№2&ndash;</span><br>
             <p>
               Да, по нему можно пройти! <br>
               Если конечно вы осмелитесь
             </p>
-          </div>
-        </article>
-        <article class="box box-grey">
-          <div class="box-content">
-            <strong class="box-name">
-              Небольшая <br>
-              площадь</strong> <br>
-            <span>-№3-</span>
+        </div>
+      </section>
+      <section class="benefits">
+        <div class="box box-grey">
+            <h2>Небольшая <br>площадь</h2>
+            <span>&ndash;№3&ndash;</span><br>
             <p>
               Все достопримечательности <br>
               находятся очень близко
             </p>
-          </div>
-        </article>
-        <article class="box box-grey">
-          <div class="box-content">
-            <strong class="box-name">
-              Красивая <br>
-              дорога</strong> <br>
-            <span>-№4-</span>
+        </div>
+        <div class="box box-grey">
+            <h2>Красивая <br>дорога</h2>
+            <span>&ndash;№4&ndash;</span><br>
             <p>
               Ехать в Седону из Лас-Вегаса совсем <br>
               не скучно!
             </p>
-          </div>
-        </article>
-        <article class="box box-grey">
-          <div class="box-content">
-            <strong class="box-name">
-              Мало <br>
-              Туристов</strong> <br>
-            <span>-№5-</span>
+        </div>
+        <div class="box box-grey">
+            <h2>Мало <br>Туристов</h2> <br>
+            <span>&ndash;№5&ndash;</span>
             <p>
               Большинство едет в Гранд Каньон и <br>
               толпится там
             </p>
-          </div>
-        </article>
+        </div>
       </section>
       <section class="interest">
         <div class="main-block">
-          <p><strong>Заинтересовались?</strong><br>
+          <h1>Заинтересовались?</h1>
+          <p>
             Укажите предпологаемые даты поездки, <br>
             и мы покажем вам лучшие предложения гостиниц в Седоне
           </p>
           <form class="hotels-search" action="https://echo.htmlacademy.ru" method="post">
-            <div class="top-form">
-              <label><input type="button" value="Поиск гостиницы в Седоне"></label>
-            </div>
+            <a href="#">Поиск гостиницы в Седоне</a>
             <div class="body-form">
               <label for="come-in">Дата заезда:
-                <input type="text" name="date-in" id="come-in"> <br> <!--В спеке прочел что иконка календаря прикручивается как-то отдельно (?)-->
+                <input type="text" name="date-in" id="come-in">
               </label>
               <label for="come-out">Дата выезда:
-                <input type="text" name="date-out" id="come-out"> <br>
+                <input type="text" name="date-out" id="come-out">
               </label>
-              <label for="adults">Взрослые:
-                <input type="text" name="adults" id="adults"> <br> <!--Не знаю как сделать числовой перебор + -, почитал про type="number" но там совсем по другому выходит или это через button делать?-->
-              </label>
-              <label for="childs">Дети:
+              <label for="adults">Взрослые:</label>
+                <input type="button" value="-">
+                <input type="text" name="adults" id="adults">
+                <input type="button" value="+">
+              <label for="childs">Дети:</label>
+                <input type="button" value="-">
                 <input type="text" name="childs" id="childs">
-              </label>
+                <input type="button" value="+">
             </div>
             <div class="bottom-form">
-              <label><input type="submit" value="Найти"></label>
+              <input type="submit" value="Найти">
             </div>
           </form>
         </div>
       </section>
-      <div class="map">
+      <section class="map">
         <iframe width="600" height="400" style="border:0" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7785.757369518063!2d-111.76400148179546!3d34.868292753181926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sru!4v1453692109517">
         </iframe>
-      </div>
+      </section>
         <footer>
           <div class="hash">
             <a href="#">#visitsedona</a>
@@ -166,7 +148,7 @@
             <a class="btn btn-yt" href="#"><img src="#" alt="youtube"></a>
           </div>
           <div class="made-by">
-            <span>Webssite by</span>
+            <span>Website by</span>
             <a href="#"><img src="#" alt="html academy"></a>
           </div>
         </footer>
