image and style added

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
     <section class="whole-content">
@@ -10,13 +11,13 @@
         <ul>
           <li><a href="#">Информация</a></li>
           <li><a href="#">Фото и видео</a></li>
-          <li><a class="logo" href="#"><img src="#" alt="home"></a></li>
+          <li><a class="logo" href="#"><img src="img/nav-logo.png" width="137" height="70" alt="home"></a></li>
           <li><a href="#">Карта штата</a></li>
           <li><a href="#">Гостиницы</a></li>
         </ul>
       </header>
       <section class="head-pic">
-          <img src="http://placehold.it/150x100" width="666" height="200" alt="sedona">
+          <img src="img/sedona-text.png" width="458" height="352" alt="sedona">
       </section>
       <section class="head-caption">
         <h2>
@@ -35,12 +36,12 @@
             </p>
         </div>
         <div class="box box-wide">
-          <img src="http://placehold.it/150x100" width="360" height="120" alt="pic">
+          <img src="img/town-picture.jpg" width="800" height="256" alt="pic">
         </div>
       </section>
       <section class="tips">
         <div class="box box-white">
-            <img src="http://placehold.it/150x100" width="120" height="80" alt="pic">
+            <img src="img/icon-home.png" width="75" height="72" alt="pic">
             <h2>Жилье</h2>
             <p>
               Рекомендуем пожить в настоящем <br>
@@ -48,7 +49,7 @@
             </p>
         </div>
         <div class="box box-white">
-            <img src="http://placehold.it/150x100" width="120" height="80" alt="pic">
+            <img src="img/icon-burger.png" width="74" height="70" alt="pic">
             <h2>Еда</h2>
             <p>
               Всегда заказывайте фирменный бургер, <br>
@@ -56,7 +57,7 @@
             </p>
         </div>
         <div class="box box-white">
-            <img src="http://placehold.it/150x100" width="120" height="80" alt="pic">
+            <img src="img/icon-gift.png" width="64" height="76" alt="pic">
             <h2>Сувениры</h2>
             <p>
               Не только китайского, <br>
@@ -66,7 +67,7 @@
       </section>
       <section class="devil-bridge">
         <div class="box box-wide">
-          <img src="http://placehold.it/150x100" width="360" height="120" alt="pic">
+          <img src="img/devil-bridge.jpg" width="800" height="256" alt="pic">
         </div>
         <div class="box box-blue">
             <h2>Там есть <br>мост дьявола</h2>
@@ -135,7 +136,7 @@
         </div>
       </section>
       <section class="map">
-        <iframe width="600" height="400" style="border:0" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7785.757369518063!2d-111.76400148179546!3d34.868292753181926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sru!4v1453692109517">
+        <iframe width="1200" height="564" style="border:0" src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7785.757369518063!2d-111.76400148179546!3d34.868292753181926!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sru!4v1453692109517">
         </iframe>
       </section>
         <footer>
@@ -149,7 +150,7 @@
           </div>
           <div class="made-by">
             <span>Website by</span>
-            <a href="#"><img src="#" alt="html academy"></a>
+            <a href="#"><img src="img/logo-academy.png" width="113" height="39" alt="html academy"></a>
           </div>
         </footer>
     </section>
