--- a/sedona-inner.html
+++ b/sedona-inner.html
@@ -125,9 +125,9 @@
             <a href="#">#visitsedona</a>
           </div>
           <div class="social-btn">
-            <a class="btn btn-tw" href="#"><img src="#" alt="twitter"></a>
-            <a class="btn btn-fb" href="#"><img src="#" alt="facebook"></a>
-            <a class="btn btn-yt" href="#"><img src="#" alt="youtube"></a>
+            <a class="btn" href="#"><i class="fa fa-twitter"></i></a>
+            <a class="btn" href="#"><i class="fa fa-facebook"></i></a>
+            <a class="btn" href="#"><i class="fa fa-youtube"></i></a>
           </div>
           <div class="made-by">
             <span>Website by</span>
