--- a/sedona-inner.html
+++ b/sedona-inner.html
@@ -76,7 +76,7 @@
           </div>
         </div>
         <div class="raiting-block">
-          <img src="#" alt="rating">
+          <i class="rating-stars"></i>
           <span class="rating">Рейтинг: 8,5</span>
         </div>
       </article>
@@ -96,7 +96,7 @@
           </div>
         </div>
         <div class="raiting-block">
-          <img src="#" alt="rating">
+          <i class="rating-stars"></i>
           <span class="rating">Рейтинг: 8,9</span>
         </div>
       </article>
@@ -116,7 +116,7 @@
           </div>
         </div>
         <div class="raiting-block">
-          <img src="#" alt="rating">
+          <i class="rating-stars"></i>
           <span class="rating">Рейтинг: 9,2</span>
         </div>
       </article>
