--- a/sedona-inner.html
+++ b/sedona-inner.html
@@ -64,8 +64,8 @@
       <article class="index-block">
         <div class="photo">
           <img class="picture" src="img/amara-hotel.jpg" width="135" height="90" alt="pic">
-        </div>
-        <div class="name-block">
+        </div><!--
+        --><div class="name-block">
           <h2>Amara Resort &amp; Spa</h2>
           <div class="type">
             <h4>Гостиница</h4>
@@ -75,8 +75,8 @@
             <h4>от 3500 Р.</h4>
             <a href="#">Забронировать</a>
           </div>
-        </div>
-        <div class="raiting-block">
+        </div><!--
+        --><div class="raiting-block">
           <i class="rating-stars"></i>
           <span class="rating">Рейтинг: 8,5</span>
         </div>
@@ -104,8 +104,8 @@
       <article class="index-block">
         <div class="photo">
           <img class="picture" src="img/villas-apart.jpg" width="135" height="90" alt="pic">
-        </div>
-        <div class="name-block">
+        </div><!--
+        --><div class="name-block">
           <h2>Villas at Poco Diablo</h2>
           <div class="type">
             <h4>Апартаменты</h4>
@@ -115,13 +115,13 @@
             <h4>от 4000 Р.</h4>
             <a href="#">Забронировать</a>
           </div>
-        </div>
-        <div class="raiting-block">
+        </div><!--
+        --><div class="raiting-block">
           <i class="rating-stars"></i>
           <span class="rating">Рейтинг: 9,2</span>
         </div>
       </article>
-        <footer>
+        <footer class="inner-footer clearfix">
           <div class="hash">
             <a href="#">#visitsedona</a>
           </div>
