--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <section class="real-town">
         <div class="box box-blue">
             <h2>Настоящий<br>городок</h2>
-            <span>&ndash; №1 &ndash;</span>
+            <span>&mdash; №1 &mdash;</span>
             <p>
               Седона - не аттракцион для туристов, <br>
               там течет своя жизнь
@@ -75,7 +75,7 @@
         </div><!--
         --><div class="box box-blue">
             <h2>Там есть <br>мост дьявола</h2>
-            <span>&ndash; №2 &ndash;</span><br>
+            <span>&mdash; №2 &mdash;</span><br>
             <p>
               Да, по нему можно пройти! <br>
               Если конечно вы осмелитесь
@@ -85,7 +85,7 @@
       <section class="benefits">
         <div class="box box-grey">
             <h2>Небольшая <br>площадь</h2>
-            <span>&ndash; №3 &ndash;</span><br>
+            <span>&mdash; №3 &mdash;</span><br>
             <p>
               Все достопримечательности <br>
               находятся очень близко
@@ -93,7 +93,7 @@
         </div><!--
         --><div class="box box-grey">
             <h2>Красивая <br>дорога</h2>
-            <span>&ndash; №4 &ndash;</span><br>
+            <span>&mdash; №4 &mdash;</span><br>
             <p>
               Ехать в Седону из Лас-Вегаса совсем <br>
               не скучно!
@@ -101,7 +101,7 @@
         </div><!--
         --><div class="box box-grey">
             <h2>Мало <br>Туристов</h2>
-            <span>&ndash; №5 &ndash;</span>
+            <span>&mdash; №5 &mdash;</span>
             <p>
               Большинство едет в Гранд Каньон и <br>
               толпится там
@@ -143,7 +143,7 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d680873.8007030621!2d-112.18170003579067!3d34.84543763876326!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1454264064313" frameborder="0" allowfullscreen></iframe>
         </iframe>
       </section>
-        <footer>
+        <footer class="main-footer clearfix">
           <div class="hash">
             <a href="#">#visitsedona</a>
           </div>
