--- a/sedona-inner.html
+++ b/sedona-inner.html
@@ -14,7 +14,7 @@
           --><li><a href="#">Фото и видео</a></li><!--
           --><li><a href="index.html"><img src="img/nav-logo.png" width="137" height="70" alt="home"></a></li><!--
           --><li><a href="#">Карта штата</a></li><!--
-          --><li><a href="#">Гостиницы</a></li>
+          --><li><a href="sedona-inner.html">Гостиницы</a></li>
         </ul>
       </header>
       <section class="main-form">
@@ -24,14 +24,14 @@
             <label><input type="checkbox" name="swimming-pool" checked>Бассейн</label>
             <label><input type="checkbox" name="parking">Парковка</label>
             <label><input type="checkbox" name="Wi-Fi">WI-FI</label>
-          </div>
-          <div class="type-accomodation">
+          </div><!--
+          --><div class="type-accomodation">
             <h3>Тип жилья:</h3>
             <label><input type="checkbox" name="hotel" checked>Гостиница</label>
             <label><input type="checkbox" name="motel" checked>Мотель</label>
             <label><input type="checkbox" name="apart" checked>Аппартаменты</label>
-          </div>
-          <div class="range">
+          </div><!--
+          --><div class="range">
             <h3>Стоимость в сутки (Р):</h3>
             <div>
                 <input type="text" name="min-cost" value="От 0">
@@ -66,7 +66,7 @@
           <img class="picture" src="img/amara-hotel.jpg" width="135" height="90" alt="pic">
         </div><!--
         --><div class="name-block">
-          <h2>Amara Resort &amp; Spa</h2>
+          <a href="#"><h2>Amara Resort &amp; Spa</h2></a>
           <div class="type">
             <h4>Гостиница</h4>
             <a href="#">Подробнее</a>
@@ -86,7 +86,7 @@
           <img class="picture" src="img/desert-motel.jpg" width="135" height="90" alt="pic">
         </div><!--
         --><div class="name-block">
-          <h2>Desert Quail Inn</h2>
+          <a href="#"><h2>Desert Quail Inn</h2></a>
           <div class="type">
             <h4>Мотель</h4>
             <a href="#">Подробнее</a>
@@ -106,7 +106,7 @@
           <img class="picture" src="img/villas-apart.jpg" width="135" height="90" alt="pic">
         </div><!--
         --><div class="name-block">
-          <h2>Villas at Poco Diablo</h2>
+          <a href="#"><h2>Villas at Poco Diablo</h2></a>
           <div class="type">
             <h4>Апартаменты</h4>
             <a href="#">Подробнее</a>
