починил лого в подвале

--- a/sedona-inner.html
+++ b/sedona-inner.html
@@ -171,7 +171,7 @@
           </div><!--
           --><div class="made-by">
             <span>Website by</span>
-            <a href="#"><img src="img/logo-academy.png" width="113" height="39" alt="html academy"></a>
+            <a href="#"><span class="sprite-logo"></span></a>
           </div>
         </footer>
       </main>
